# fiki

./: README.md  pyproject.toml
src/: app.py
src/core/config/: __init__.py  defaults.py  testing.py
src/pages/en/: index.md
src/templates/: base.jinja  page.jinja
