[project]
name = "fiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "mistune>=3.2.1",
    "python-frontmatter>=1.3.0",
]

[dependency-groups]
dev = [
    "djhtml>=3.0.10",
    "ipdb>=0.13.13",
    "ipython>=9.11.0",
    "pyrefly>=0.57.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 110
src = [".", "src"]

[tool.djlint]
max_line_length = 110
